--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group">
-        <% if current_user.present? %>
+        <% if current_user.present? || params[:action] == "edit" %>
           <%= f.submit "submit" , class: 'btn btn-lg btn-default btn-home' %>
         <% else %>
           <%= link_to "Authenticate with GitHub", "/auth/github", class: "btn btn-lg btn-default btn-home"%>
