--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,1 +1,2 @@
-<%= render :partial => 'home/form', locals: {:blogs => @blogs, :post_form => @post_form} %>
+
+<%= render :partial => 'home/form', locals: {:@blogs => @blog, :post_form => @post_form } %>
