--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
   
   <b class=" col-md-offset-8 form-link ">
-    <% if current_user.present? %>
+    <% if current_user %>
       <%=link_to "LogOut", logout_path(session: session[:user_id]), :method => :delete%>
     <% end %>
     <%=link_to "Post Blog", '', id: "submitPost" %>
